fix build trigger

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,11 @@ on:
       - build
     paths:
       - '.github/workflows/build.yml'
-      - 'build-sample'
+      - 'build-sample/**'
   pull_request:
     paths:
       - '.github/workflows/build.yml'
-      - 'build-sample'
+      - 'build-sample/**'
 
 jobs:
   build:
