--- a/build-sample/pom.xml
+++ b/build-sample/pom.xml
@@ -10,6 +10,7 @@
     <version>2-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.finos.alloy</groupId>
   <artifactId>buildSample</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
