--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 13
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
     - name: Run mvn tests
       run: |
         cd build-sample
@@ -34,6 +37,7 @@ jobs:
     - name: Deploy SNAPSHOT version to oss.sonatype.org (and submit metrics to sonarcloud.io)
       run: |
         cd build-sample
-        export CI_DEPLOY_USERNAME="${{ secrets.CI_DEPLOY_USERNAME }}"
-        export CI_DEPLOY_PASSWORD="${{ secrets.CI_DEPLOY_PASSWORD }}"
-        mvn deploy -Psonar -s settings.xml
+        mvn deploy -Psonar
+      env:
+        MAVEN_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
