--- a/build-sample/pom.xml
+++ b/build-sample/pom.xml
@@ -15,6 +15,10 @@
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <sonar.projectKey>Alloy</sonar.projectKey>
+  </properties>
+
   <modules>
     <module>server</module>
     <module>ui</module>
