--- a/build-sample/server/pom.xml
+++ b/build-sample/server/pom.xml
@@ -10,7 +10,6 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.finos</groupId>
   <artifactId>server</artifactId>
 
   <properties>
@@ -22,7 +21,6 @@
   </properties>
 
   <dependencies>
-
     <dependency>
       <artifactId>ui</artifactId>
       <groupId>org.finos.alloy</groupId>
@@ -111,6 +109,39 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+
+      <!-- TODO - add to finos parent pom -->
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <version>1.4.13</version>
+        <executions>
+            <execution>
+                <id>default</id>
+                <goals>
+                    <goal>build</goal>
+                    <goal>push</goal>
+                </goals>
+            </execution>
+            <execution>
+                <id>tag-latest</id>
+                <goals>
+                    <goal>build</goal>
+                    <goal>push</goal>
+                </goals>
+                <configuration>
+                    <tag>latest</tag>
+                </configuration>
+            </execution>
+        </executions>
+        <configuration>
+          <repository>finos/alloy</repository>
+          <tag>${project.version}</tag>
+          <buildArgs>
+            <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+          </buildArgs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
