--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,8 +46,8 @@ jobs:
       run: |
         cd build-sample
         # TODO - fix deploy, fails with 401
-        # mvn deploy -Psonar
-        mvn install -Psonar
+        mvn deploy -Psonar
+        # mvn install -Psonar
       env:
         CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
         CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
