--- a/build-sample/server/pom.xml
+++ b/build-sample/server/pom.xml
@@ -110,39 +110,49 @@
           </execution>
         </executions>
       </plugin>
-
-      <!-- TODO - add to finos parent pom -->
-      <plugin>
-        <groupId>com.spotify</groupId>
-        <artifactId>dockerfile-maven-plugin</artifactId>
-        <version>1.4.13</version>
-        <executions>
-            <execution>
-                <id>default</id>
-                <goals>
-                    <goal>build</goal>
-                    <goal>push</goal>
-                </goals>
-            </execution>
-            <execution>
-                <id>tag-latest</id>
-                <goals>
-                    <goal>build</goal>
-                    <goal>push</goal>
-                </goals>
-                <configuration>
-                    <tag>latest</tag>
-                </configuration>
-            </execution>
-        </executions>
-        <configuration>
-          <repository>finos/alloy</repository>
-          <tag>${project.version}</tag>
-          <buildArgs>
-            <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-          </buildArgs>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <!-- TODO - add to finos parent pom -->
+    <profile>
+      <id>docker</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <version>1.4.13</version>
+            <executions>
+                <execution>
+                    <id>default</id>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>push</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>tag-latest</id>
+                    <goals>
+                        <goal>build</goal>
+                        <goal>push</goal>
+                    </goals>
+                    <configuration>
+                        <tag>latest</tag>
+                    </configuration>
+                </execution>
+            </executions>
+            <configuration>
+              <repository>finos/alloy</repository>
+              <tag>${project.version}</tag>
+              <buildArgs>
+                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+              </buildArgs>
+            </configuration>
+          </plugin>
+
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
