--- a/build-sample/pom.xml
+++ b/build-sample/pom.xml
@@ -57,6 +57,13 @@
           </filesets>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+        <configuration>
+            <skip>true</skip>
+         </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
