--- a/build-sample/server/pom.xml
+++ b/build-sample/server/pom.xml
@@ -122,39 +122,10 @@
           <plugin>
             <groupId>com.spotify</groupId>
             <artifactId>dockerfile-maven-plugin</artifactId>
-            <version>1.4.13</version>
-            <executions>
-                <execution>
-                    <id>default</id>
-                    <goals>
-                        <goal>build</goal>
-                        <goal>push</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>tag-latest</id>
-                    <goals>
-                        <goal>build</goal>
-                        <goal>push</goal>
-                    </goals>
-                    <configuration>
-                        <tag>latest</tag>
-                    </configuration>
-                </execution>
-            </executions>
             <configuration>
-              <username>${env.DOCKER_USERNAME}</username>
-              <password>${env.DOCKER_PASSWORD}</password>
-              <!-- TODO - enable when build is final -->
-              <!-- <repository>registry.hub.docker.com/${env.DOCKER_USERNAME}/${project.artifactId}</repository> -->
-              <repository>registry.hub.docker.com/${env.DOCKER_USERNAME}/alloy-sample-build</repository>
-              <tag>${project.version}</tag>
-              <buildArgs>
-                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-              </buildArgs>
+              <skip>false</skip>
             </configuration>
           </plugin>
-
         </plugins>
       </build>
     </profile>
