--- a/build-sample/pom.xml
+++ b/build-sample/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.finos</groupId>
     <artifactId>finos</artifactId>
-    <version>2-SNAPSHOT</version>
+    <version>2</version>
   </parent>
 
   <groupId>org.finos.alloy</groupId>
@@ -36,6 +36,11 @@
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
+    </repository>
+    <repository>
+      <id>ossrh-releases</id>
+      <name>OSSRH Public Releases Group</name>
+      <url>https://oss.sonatype.org/content/repositories/releases/</url>
     </repository>
   </repositories>
 
