also deploy to OSS sonatype if branch is dev

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       if: github.ref == 'refs/heads/dev'
       run: |
         cd build-sample
-        mvn install -Psonar,docker
+        mvn deploy -Psonar,docker
     - name: Build + Test + Sonar + Maven/Docker Deploy
       # TODO - set to master
       if: github.ref == 'refs/heads/build'
